testdata/typechecker/error/IntTest-err.java
int main() {
            int x;
            x = true; // TE
		return 0;
}

